--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,6 @@ header img {
 	background-color:#000;
 	background-size: cover;
 	opacity: 0.8;
-	/*background:linear-gradient(-135deg,#000080, #0000cc,transparent);*/
 }
 .headbox img,nav{
 	margin-top: 10px;
@@ -39,309 +38,140 @@ header img {
 	text-align: center;
 	border-left: 1px solid #ffffff;
 	border-right: 1px solid #ffffff;
-	
 }
 #nav a{
 	color: white;
 }
 
-/*#nav ul li a:link{
+#nav ul li a:link{
 	color: #000080;
-	}*/
+}
 
-	#nav ul li a:hover{
-		color: #ffffff
-	}
+#nav ul li a:hover{
+	color: #ffffff
+}
 
-	#nav li+ li {
-		border-left: none ;
-	}
+#nav li+ li {
+	border-left: none ;
+}
 
-	#header-sm{
-		display: none;
-	}
+#header-sm{
+	display: none;
+}
 
-	.open-overlay {
-		position: absolute;
-		top: 0.5rem;
-		z-index: 100;
-		width: 120px;
-		display: block;
-		cursor: pointer;
-		right: 1rem;
-		height: 50px;
-	}
+/*.open-overlay {
+	position: absolute;
+	top: 0.5rem;
+	z-index: 100;
+	width: 120px;
+	display: block;
+	cursor: pointer;
+	right: 1rem;
+	height: 50px;
+}*/
 
-	.open-overlay span {
-		display: block;
-		height: 3px;
-		background-color: #fff;
-		cursor: pointer;
-		margin-top: 28px;
-		width: 100px;
-		margin-left: 25px;
-	}
+.open-overlay span {
+	display: block;
+	height: 3px;
+	background-color: #fff;
+	cursor: pointer;
+	margin-top: 28px;
+	width: 100px;
+	margin-left: 25px;
+}
 
-	.maru{
-		display: inline-block;
-		position:fixed;
-		top:0;
-		float: right;
-		width: 150px;
-		height: 130px;
-		text-decoration: none
-		color: #FFF;
-		margin-left: -150px;
-		margin-top: -10px;
-		line-height: 150px;
-		text-align: center;
-		border: dashed 1px #FFF;
-		transition: .4s;
-	}
-
-
-
-/*	.animate-top-bar {
-	  -webkit-animation: animate-top-bar .6s linear 1 both;
-	  animation: animate-top-bar .6s linear 1 both
-	}
-
-	.animate-bottom-bar {
-	  -webkit-animation: animate-bottom-bar .6s linear 1 both;
-	  animation: animate-bottom-bar .6s linear 1 both
-	}
-
-	.animate-middle-bar {
-	  -webkit-animation: animate-middle-bar .6s linear 1 both;
-	  animation: animate-middle-bar .6s linear 1 both
-	}
-
-	.animate-out-top-bar {
-	  -webkit-animation: animate-out-top-bar .6s linear 1 both;
-	  animation: animate-out-top-bar .6s linear 1 both
-	}
-
-	.animate-out-bottom-bar {
-	  -webkit-animation: animate-out-bottom-bar .6s linear 1 both;
-	  animation: animate-out-bottom-bar .6s linear 1 both
-	}
-
-	.animate-out-middle-bar {
-	  -webkit-animation: animate-out-middle-bar .6s linear 1 both;
-	  animation: animate-out-middle-bar .6s linear 1 both
-	}
-
-	@keyframes animate-top-bar {
-	  0% {
-	    background-color: #fff;
-	  }
-	  50% {
-	    -webkit-transform: translateY(9px);
-	    transform: translateY(9px)
-	  }
-	  80% {
-	    -webkit-transform: translateY(5px);
-	    transform: translateY(5px);
-	    background-color: #fff
-	  }
-	  100% {
-	    -webkit-transform: translateY(0);
-	    transform: translateY(0);
-	    background-color: #29363B;
-	  }
-	}
-
-	@keyframes animate-bottom-bar {
-	  0% {
-	    background-color: #fff;
-	  }
-	  50% {
-	    -webkit-transform: translateY(-9px);
-	    transform: translateY(-9px)
-	  }
-	  80% {
-	    -webkit-transform: translateY(-5px);
-	    transform: translateY(-5px);
-	    background-color: #fff;
-	  }
-	  100% {
-	    -webkit-transform: translateY(0);
-	    transform: translateY(0);
-	    background-color: #29363B;
-	  }
-	}
-
-	@keyframes animate-middle-bar {
-	  0% {
-	    background-color: #fff;
-	  }
-	  80% {
-	    background-color: #fff;
-	  }
-	  100% {
-	    background-color: #29363B;
-	  }
-	}
-
-	@keyframes animate-out-top-bar {
-	  0% {
-	    background-color: #29363B
-	  }
-	  50% {
-	    -webkit-transform: translateY(9px);
-	    transform: translateY(9px)
-	  }
-	  80% {
-	    -webkit-transform: translateY(5px);
-	    transform: translateY(5px);
-	    background-color: #29363B
-	  }
-	  100% {
-	    -webkit-transform: translateY(0);
-	    transform: translateY(0);
-	    background-color: #FFF;
-	  }
-	}
-
-	@keyframes animate-out-bottom-bar {
-	  0% {
-	    background-color: #29363B
-	  }
-	  50% {
-	    -webkit-transform: translateY(-9px);
-	    transform: translateY(-9px)
-	  }
-	  80% {
-	    -webkit-transform: translateY(-5px);
-	    transform: translateY(-5px);
-	    background-color: #29363B;
-	  }
-	  100% {
-	    -webkit-transform: translateY(0);
-	    transform: translateY(0);
-	    background-color: #FFF;
-	  }
-	}
-
-	@keyframes animate-out-middle-bar {
-	  0% {
-	    background-color: #29363B
-	  }
-	  80% {
-	    background-color: #29363B;
-	  }
-	  100% {
-	    background-color: #fff;
-	  }
-	  }*/
-
-	}
-	/*	↓footerのcss↓	*/
-
-	footer{
-		text-align: center;
-	}
-	.head{
-		display: flex;
-		justify-content: center;
-		list-style: none;
-		line-height: 72px;
-	}
-	.main_bottom{
-		/*background-color:royalblue;*/
-		width: 80%;
-		margin: 0 auto;
-		/*	border-top: solid 1px white;*/
-	}
-/*.bottom_main{
-	margin: 0px 0 100px;
-	padding: 30px;
+.maru{
+	display: inline-block;
+	position:fixed;
+	top:0;
+	float: right;
+	width: 150px;
+	height: 130px;
+	text-decoration: none;
+	color: #FFF;
+	margin-left: -150px;
+	margin-top: -10px;
+	line-height: 150px;
 	text-align: center;
+	border: dashed 1px #FFF;
+	transition: .4s;
+}
+/*	↓footerのcss↓	*/
+
+footer{
+	text-align: center;
+}
+.head{
 	display: flex;
 	justify-content: center;
-	background-color:#4682b4;
-	}*/
-	.bottom{
-		text-align:right;
-		margin-right: 100px;
-	}
+	list-style: none;
+	line-height: 72px;
+}
+.main_bottom{
+	width: 80%;
+	margin: 0 auto;
+}
 
-	#footer {
-		/*background:linear-gradient(-135deg,#000080, #000,transparent);*/
-		background-color: black;
-		/*opacity: 0.5;*/
-		width: 100%;
-		height: 100px;
-		text-align:center;
-	}
+.bottom{
+	text-align:right;
+	margin-right: 100px;
+}
 
-	#footer-content li{
-		margin-top: 20px;
-	}
+#footer {
+	background-color: black;
+	width: 100%;
+	height: 100px;
+	text-align:center;
+}
 
-	#footer-content li{
-		display: inline-block;
-		margin-left: 20px;
-		}#footer-content a{
-			color: white;
-		}
+#footer-content li{
+	margin-top: 20px;
+}
+
+#footer-content li{
+	display: inline-block;
+	margin-left: 20px;
+}
+#footer-content a{
+	color: white;
+}
 
 
 
 
 
-		/* 下記スマホ用 流用 */
-		@media screen and (max-width: 1242px) {
-/*.pankuzu{
-	margin-top: 150px;
-	}*/
-	/*三角の部分*/
-/*.pankuzu li:after {
-  border-width: 20px 16px;
-  }*/
+/* 下記スマホ用 流用 */
+@media screen and (max-width: 1242px) {
 
-/*.pankuzu li a {
-  height: 40px;
-  line-height: 40px;
-  font-size: 30px;
-  }*/
   .logo{
-  	margin-top: 30px;
+  	margin-top: 10px;
   	filter: brightness(200%);
   }
 
-  .menuMoji{
-  	float: right; 
-  	margin-right: 100px;
-  	margin-top: -30px;
-  	color: #fff; 
-  	font-size: 40px; 
-  }
+  	#footer {
+  		font-size: 20px;
+  	}
 
-  #footer {
-  	font-size: 20px;
-  }
+  	/*ヘッダー基礎部分*/
+  	header{
+  		display: none;
+  	}
 
-  /*ヘッダー基礎部分*/
-  header{
-  	display: none;
-  }
+  	#header-sm{
+  		position: fixed;
+  		top: -50px;
+  		left: 0;
+  		margin-top: 50px;
+  		width: 100%;
+  		height: 80px;
+  		text-align: center;
+  		display: block;
+  		z-index:24;
+  		background:linear-gradient(-135deg,#222, #000,transparent);
 
-  #header-sm{
-  	position: fixed;	
-  	top: -50px;	
-  	left: 0;	
-  	margin-top: 50px;
-  	width: 100%;
-  	height: 120px;
-  	text-align: center;
-  	display: block;
-  	z-index:24;
-  	background:linear-gradient(-135deg,#222, #000,transparent);
+  	}
 
-  }
-
-  .home a {
+/*  .home a {
   	font-family: "Work Sans", sans-serif;
   	color: #222;
   	font-weight: 300;
@@ -354,7 +184,7 @@ header img {
   	left: -50px;
   	padding-bottom: 3px;
   	border-bottom: 1px solid #222;
-  }
+  	}*/
 
 
 
@@ -362,28 +192,38 @@ header img {
 
 
 
-  /*以下ヘッダーアニメーション部分 jQueryも使用している*/
-  .overlay-navigation {
-/*  	position: fixed;
-  	z-index: 99;
-  	top: 0;
-  	left: 0;
-  	width: 100%;
-  	height: 100%;*/
-/*  	background-color: hsla(0, 0%, 100%, 0.2);*/
-  	display: none;
-/*  	opacity: 0;*/
-  }
 
-  nav,
+
+
+
+
+
+
+  	/*以下ヘッダーアニメーション部分 jQueryも使用している*/
+  	.overlay-navigation {
+  		position: fixed;
+  		z-index: 99;
+  		top: 180;
+  		left: 0;
+  		width: 100%;
+  		height: 100%;
+  		background-color: hsla(0, 0%, 100%, 0.2);
+  		display: none;
+  		opacity: 0;
+  	}
+  	.active{
+  		opacity:1;
+
+  	}
+/*  nav,
   nav ul {
   	width: 100%;
   	height: 100%;
   	margin: 0;
   	padding: 0;
-  }
+  	}*/
 
-  nav ul {
+/*  nav ul {
   	display: -webkit-box;
   	display: -webkit-flex;
   	display: -ms-flexbox;
@@ -394,12 +234,12 @@ header img {
   	display: flex;
   	list-style: none;
   	flex-direction: column;
-  }
+  	}*/
 
-  nav ul li {
-  	-webkit-flex-basis: 20%;
-  	-ms-flex-preferred-size: 20%;
-  	flex-basis: 20%;
+/*  nav ul li {
+  	-webkit-flex-basis: 15%;
+  	-ms-flex-preferred-size: 15%;
+  	flex-basis: 18%;
   	-webkit-box-pack: center;
   	-webkit-justify-content: center;
   	-ms-flex-pack: center;
@@ -408,13 +248,13 @@ header img {
   	-webkit-align-items: center;
   	-ms-flex-align: center;
   	align-items: center;
-  	height: 20%;
+  	height: 10%;
   	overflow: hidden;
-  	opacity: 0;
+  	padding-top: 35px;
   	display: none;
-  }
+  	}*/
 
-  nav li a {
+/*  nav li a {
   	position: relative;
   	top: 46%;
   	color: #fff;
@@ -427,11 +267,11 @@ header img {
   	text-align: center;
   	font-size: 3rem;
   	opacity: 0;
-  }
+  	}*/
 
 
-  /*確認*/
-
+  	/*確認*/
+/*
   nav li a:before {
   	content: '';
   	width: 25px;
@@ -469,22 +309,22 @@ header img {
   	font-weight: 300;
   	font-style: italic;
   	letter-spacing: 0;
-  }
+  	}*/
 
-  nav li a:hover:before {
+/*  nav li a:hover:before {
   	-webkit-transform: translateX(0);
   	-ms-transform: translateX(0);
   	transform: translateX(0);
   	opacity: 1;
-  }
+  	}*/
 
-  nav li a:hover:after {
+/*  nav li a:hover:after {
   	-webkit-transform: translateY(15px);
   	-ms-transform: translateY(15px);
   	transform: translateY(0);
   	opacity: 1;
-  }
-
+  	}*/
+/*
   nav ul li a{
   	font-size: 40px;
   }
@@ -511,7 +351,7 @@ header img {
 
   nav li:nth-of-type(6) {
   	background-color: #005fff
-  }
+  	}*/
 
 
 
@@ -660,89 +500,102 @@ header img {
 		display: inline-block;
 		position:fixed;
 		top:0;
+		right: 1;
 		float: right;
 		width: 150px;
 		height: 130px;
-		text-decoration: none
-		color: #FFF;
-		margin-left: -150px;
-		margin-top: -10px;
+		text-decoration: none;
 		line-height: 150px;
 		text-align: center;
-		border: dashed 1px #FFF;
 		transition: .4s;
 	}
 
 
-	.animate-top-bar {
-		-webkit-animation: animate-top-bar .6s linear 1 both;
-		animation: animate-top-bar .6s linear 1 both
-	}
+	/*流用*/
+	@media screen and (max-width: 980px) {
+		.open-overlay span {
+			height: 5px;
+			margin-top: 35px;
+			width: 130px;
+		}
 
-	.animate-bottom-bar {
-		-webkit-animation: animate-bottom-bar .6s linear 1 both;
-		animation: animate-bottom-bar .6s linear 1 both
-	}
+		.maru{
+			width: 180px;
+			height: 120px;
+		}
+		.logo{
+			margin-top: 50px;
+		}
 
-	.animate-middle-bar {
-		-webkit-animation: animate-middle-bar .6s linear 1 both;
-		animation: animate-middle-bar .6s linear 1 both
-	}
+		.menuMoji{
+			margin-right: 85px;
+		}
 
-	.animate-out-top-bar {
-		-webkit-animation: animate-out-top-bar .6s linear 1 both;
-		animation: animate-out-top-bar .6s linear 1 both
-	}
+		#footer {
+			font-size: 20px;
+		}
 
-	.animate-out-bottom-bar {
-		-webkit-animation: animate-out-bottom-bar .6s linear 1 both;
-		animation: animate-out-bottom-bar .6s linear 1 both
-	}
+		.pankuzu{
+			display: none;
+		}
+		#footer-content {
+			display: none;
+		}
 
-	.animate-out-middle-bar {
-		-webkit-animation: animate-out-middle-bar .6s linear 1 both;
-		animation: animate-out-middle-bar .6s linear 1 both
-	}
+		#footer{
+			font-size: 40px;
+			height: 50px;
+		}
+
+		#header-sm {
+			height: 120px ;
+		}
+
+
+
+
+
+		.maru,
+		.maru span {
+			transition: all .8s linear;
+			/*cssでのアニメーションをつける allは全て、4s変化の始まりから終わり,(option例 ease 開始時と終了時は緩やか,linear 一定に変化,ease-in開始時は緩やか終了に近づくほど速く変化,ease-out開始時は早く変化し、終了時にはゆっくりになる) transiton:all 3s 2s easeと設定すると2sは変化を遅らせてスタートさせることができる*/
+			box-sizing: border-box;
+		}
+		.maru.active span:nth-of-type(1){
+			-webkit-transform:translateY(20px) rotate(-45deg);
+			transform: translateY(40px) rotate(-45deg);
+			background-color: #fff;
+		}
+		.maru.active span:nth-of-type(2){
+			opacity:0;
+		}
+		.maru.active span:nth-of-type(3){
+			-webkit-transform:translateY(-20px) rotate(45deg);
+			transform:translateY(-40px) rotate(45deg);
+	/*translate 移動させるcssここではtranslateY Y軸に-20pxうごかす,rotateは回転角度
+	ほかのオプションskew 平行四辺形 perspective遠近効果rotateとセット,scale 尺度*/
+	background-color:#fff;
 }
+/*spメニュー*/
+/*#sp-menu{
+	position:fixed;
+	top:60px;
+	left:0;
+	background:linear-gradient(#e0ffff,#f8f8ff);
+	color:#fff;
+	width:100%;
+	display:none;
+	z-index:9;
+}
+#sp-menu li{
+	text-align:center;
+	margin:30px 0;
+	list-style: none;
+	font-size:50px;
+	border:solid 1px black;
 
-
-/*流用*/
-@media screen and (max-width: 980px) {
-	.open-overlay span {
-		height: 5px;
-		margin-top: 30px;
-		width: 130px;
-	}
-
-	.maru{
-		width: 180px;
-		height: 160px;
-	}
-	.logo{
-		margin-top: 50px;
-	}
-
-	.menuMoji{
-		margin-right: 85px;
-	}
-
-	#footer {
-		font-size: 20px;
-	}
-
-	.pankuzu{
-		display: none;
-	}
-	
-	#footer-content {
-		display: none;
-	}
-
-	#footer{
-		font-size: 40px;
-		height: 50px;
-	}
-
-	#header-sm {
-		height: 150px ;
-	}
+}
+#sp-menu a{
+	color:#000;
+	font-weight:bold;
+}*/
