--- a/works.css
+++ b/works.css
@@ -13,6 +13,30 @@
 	margin-bottom: 30px;
 }
 
+.pankuzu li {
+
+  position: relative;
+  display: inline-block;
+  padding-left: 20px;
+  color:#000000;
+  text-decoration: none;
+}
+
+.pankuzu li:after {
+
+  content: '';
+  width: 6px;
+  height: 6px;
+  border: 0;
+  border-top: solid 2px #000;
+  border-right: solid 2px #000;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  margin-top: -4px;
+  transform: rotate(45deg);
+}
+
 @media screen and (max-width: 980px)
 #works-area {
 	border-radius: 2%;
