--- a/tab.css
+++ b/tab.css
@@ -72,7 +72,7 @@ ul {
   }
   .tab-body {
     position: relative;
-    height: 120vh;
+    height: 879px;
   }
   .tab-body__item {
     position: absolute;
