--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,10 @@
 
+html{
+	height: 100%;
+}
+body{
+	height: 100%;
+}
 header img {
 	float: left ;
 	margin: 0 ;
@@ -44,7 +50,7 @@ header img {
 }
 
 #nav ul li a:link{
-	color: #000080;
+	color: #fff;
 }
 
 #nav ul li a:hover{
@@ -55,10 +61,14 @@ header img {
 	border-left: none ;
 }
 
+
+/*スマホヘッダー*/
 #header-sm{
 	display: none;
 }
-
+body.active{
+	filter:hue-rotate(90deg);
+}
 /*.open-overlay {
 	position: absolute;
 	top: 0.5rem;
@@ -69,7 +79,6 @@ header img {
 	right: 1rem;
 	height: 50px;
 }*/
-
 .open-overlay span {
 	display: block;
 	height: 3px;
@@ -79,23 +88,25 @@ header img {
 	width: 100px;
 	margin-left: 25px;
 }
-
 .maru{
 	display: inline-block;
 	position:fixed;
-	top:0;
+	top:10;
 	float: right;
-	width: 150px;
-	height: 130px;
+	width: 130px;
+	height: 100px;
 	text-decoration: none;
 	color: #FFF;
 	margin-left: -150px;
 	margin-top: -10px;
 	line-height: 150px;
 	text-align: center;
-	border: dashed 1px #FFF;
+	border: solid 1px #FFF;
 	transition: .4s;
 }
+
+
+
 /*	↓footerのcss↓	*/
 
 footer{
@@ -141,11 +152,16 @@ footer{
 
 
 /* 下記スマホ用 流用 */
-@media screen and (max-width: 1242px) {
-
+@media screen and (max-width: 980px) {
+  .clear_box{
+  	height: 100px;
+  }
   .logo{
   	margin-top: 10px;
-  	filter: brightness(200%);
+  	/*filter: brightness(150%);*/
+  }
+  .logo.active{
+  	margin-top: 3vh;
   }
 
   	#footer {
@@ -163,12 +179,15 @@ footer{
   		left: 0;
   		margin-top: 50px;
   		width: 100%;
-  		height: 80px;
+  		height: 100px;
   		text-align: center;
   		display: block;
   		z-index:24;
   		background:linear-gradient(-135deg,#222, #000,transparent);
 
+  	}
+  	#header-sm.active{
+  		height:10vh;
   	}
 
 /*  .home a {
@@ -203,27 +222,40 @@ footer{
   	.overlay-navigation {
   		position: fixed;
   		z-index: 99;
-  		top: 180;
+  		top:10vh;
   		left: 0;
   		width: 100%;
-  		height: 100%;
+  		/*height: 100%;*/
   		background-color: hsla(0, 0%, 100%, 0.2);
   		display: none;
-  		opacity: 0;
+  		/*opacity: 0;*/
+  		z-index: 9;
   	}
   	.active{
   		opacity:1;
 
   	}
-/*  nav,
+  	.overlay-navigation li{
+  		text-align:center;
+		list-style: none;
+		font-size:50px;
+		/*border:solid 1px black;*/
+  	}
+  	.overlay-navigation a{
+  		color: #fff;
+  		font-weight: bold;
+  	}
+
+
+  nav,
   nav ul {
   	width: 100%;
   	height: 100%;
   	margin: 0;
   	padding: 0;
-  	}*/
+  	}
 
-/*  nav ul {
+  nav ul {
   	display: -webkit-box;
   	display: -webkit-flex;
   	display: -ms-flexbox;
@@ -234,10 +266,10 @@ footer{
   	display: flex;
   	list-style: none;
   	flex-direction: column;
-  	}*/
+  	}
 
-/*  nav ul li {
-  	-webkit-flex-basis: 15%;
+  nav ul li {
+  	-webkit-flex-basis: 10%;
   	-ms-flex-preferred-size: 15%;
   	flex-basis: 18%;
   	-webkit-box-pack: center;
@@ -248,15 +280,14 @@ footer{
   	-webkit-align-items: center;
   	-ms-flex-align: center;
   	align-items: center;
-  	height: 10%;
+  	height: 20vh;
   	overflow: hidden;
-  	padding-top: 35px;
-  	display: none;
-  	}*/
+  	padding: 35px 0 50px;
+  	}
 
-/*  nav li a {
+  nav li a {
   	position: relative;
-  	top: 46%;
+  	top: 25%;
   	color: #fff;
   	text-transform: uppercase;
   	font-family: 'Work sans', sans-serif;
@@ -266,12 +297,12 @@ footer{
   	display: block;
   	text-align: center;
   	font-size: 3rem;
-  	opacity: 0;
-  	}*/
+  	opacity: 1;
+  	}
 
 
   	/*確認*/
-/*
+
   nav li a:before {
   	content: '';
   	width: 25px;
@@ -309,22 +340,22 @@ footer{
   	font-weight: 300;
   	font-style: italic;
   	letter-spacing: 0;
-  	}*/
+  	}
 
-/*  nav li a:hover:before {
+  nav li a:hover:before {
   	-webkit-transform: translateX(0);
   	-ms-transform: translateX(0);
   	transform: translateX(0);
   	opacity: 1;
-  	}*/
+  	}
 
-/*  nav li a:hover:after {
+  nav li a:hover:after {
   	-webkit-transform: translateY(15px);
   	-ms-transform: translateY(15px);
   	transform: translateY(0);
   	opacity: 1;
-  	}*/
-/*
+  	}
+
   nav ul li a{
   	font-size: 40px;
   }
@@ -351,7 +382,7 @@ footer{
 
   nav li:nth-of-type(6) {
   	background-color: #005fff
-  	}*/
+  	}
 
 
 
@@ -491,19 +522,19 @@ footer{
 		height: 3px;
 		background-color: #fff;
 		cursor: pointer;
-		margin-top: 28px;
-		width: 100px;
-		margin-left: 25px;
+		margin-top: 23px;
+		width: 80px;
+		margin-left: 20px;
 	}
 
 	.maru{
 		display: inline-block;
-		position:fixed;
-		top:0;
-		right: 1;
+		/*position:fixed;*/
+		/*top:10;*/
+		right: 108px;
 		float: right;
-		width: 150px;
-		height: 130px;
+		width: 120px;
+		height: 100px;
 		text-decoration: none;
 		line-height: 150px;
 		text-align: center;
@@ -511,21 +542,12 @@ footer{
 	}
 
 
-	/*流用*/
-	@media screen and (max-width: 980px) {
-		.open-overlay span {
+
+		/*	.open-overlay span {
 			height: 5px;
 			margin-top: 35px;
 			width: 130px;
-		}
-
-		.maru{
-			width: 180px;
-			height: 120px;
-		}
-		.logo{
-			margin-top: 50px;
-		}
+		}*/
 
 		.menuMoji{
 			margin-right: 85px;
@@ -547,10 +569,6 @@ footer{
 			height: 50px;
 		}
 
-		#header-sm {
-			height: 120px ;
-		}
-
 
 
 
@@ -563,7 +581,7 @@ footer{
 		}
 		.maru.active span:nth-of-type(1){
 			-webkit-transform:translateY(20px) rotate(-45deg);
-			transform: translateY(40px) rotate(-45deg);
+			transform: translateY(25px) rotate(-45deg);
 			background-color: #fff;
 		}
 		.maru.active span:nth-of-type(2){
@@ -571,31 +589,178 @@ footer{
 		}
 		.maru.active span:nth-of-type(3){
 			-webkit-transform:translateY(-20px) rotate(45deg);
-			transform:translateY(-40px) rotate(45deg);
+			transform:translateY(-27px) rotate(45deg);
 	/*translate 移動させるcssここではtranslateY Y軸に-20pxうごかす,rotateは回転角度
 	ほかのオプションskew 平行四辺形 perspective遠近効果rotateとセット,scale 尺度*/
 	background-color:#fff;
 }
-/*spメニュー*/
-/*#sp-menu{
-	position:fixed;
-	top:60px;
-	left:0;
-	background:linear-gradient(#e0ffff,#f8f8ff);
-	color:#fff;
-	width:100%;
-	display:none;
-	z-index:9;
-}
-#sp-menu li{
-	text-align:center;
-	margin:30px 0;
-	list-style: none;
-	font-size:50px;
-	border:solid 1px black;
+
+
+
+@media screen and (max-width: 480px) {
+  	.top_css{
+  		height: 500px;
+  	}
+  	.overlay-navigation {
+  		top:12vh;
+  	}
+  	#footer{
+  		font-size: 1em;
+  		height: 50px;
+  		line-height: 50px;
+  	}
+  	.maru{
+		display: inline-block;
+		right: 15px;
+		float: right;
+		width: 100px;
+		height: 100px;
+		text-decoration: none;
+		line-height: 150px;
+		text-align: center;
+		transition: .4s;
+	}
+	.open-overlay span {
+		height: 5px;
+		margin-top: 23px;
+		width: 80px;
+		margin-left: 10px;
+	}
+	nav,
+  nav ul {
+  	width: 100%;
+  	height: 100%;
+  	margin: 0;
+  	padding: 0;
+  	}
+
+  nav ul {
+  	display: -webkit-box;
+  	display: -webkit-flex;
+  	display: -ms-flexbox;
+  	-webkit-box-orient: vertical;
+  	-webkit-box-direction: normal;
+  	-webkit-flex-direction: column;
+  	-ms-flex-direction: column;
+  	display: flex;
+  	list-style: none;
+  	flex-direction: column;
+  	}
+
+  nav ul li {
+  	-webkit-flex-basis: 10%;
+  	-ms-flex-preferred-size: 15%;
+  	flex-basis: 20%;
+  	-webkit-box-pack: center;
+  	-webkit-justify-content: center;
+  	-ms-flex-pack: center;
+  	justify-content: center;
+  	-webkit-box-align: center;
+  	-webkit-align-items: center;
+  	-ms-flex-align: center;
+  	align-items: center;
+  	height: 20vh;
+  	overflow: hidden;
+  	padding: 35px 0 50px;
+  	}
+
+  nav li a {
+  	position: relative;
+  	top: 25%;
+  	color: #fff;
+  	text-transform: uppercase;
+  	font-family: 'Work sans', sans-serif;
+  	font-weight: 300;
+  	letter-spacing: 4px;
+  	text-decoration: none;
+  	display: block;
+  	text-align: center;
+  	font-size: 3rem;
+  	opacity: 1;
+  	}
+
+
+  	/*確認*/
+
+  nav li a:before {
+  	content: '';
+  	width: 25px;
+  	height: 2px;
+  	background-color: #fff;
+  	position: absolute;
+  	top: 50%;
+  	left: 0;
+  	z-index: 100;
+  	-webkit-transform: translateX(-100%);
+  	-ms-transform: translateX(-100%);
+  	transform: translateX(-100%);
+  	opacity: 0;
+  	-webkit-transition: all .2s linear;
+  	transition: all .2s linear;
+  }
+
+  nav li a:after {
+  	content: attr(data-content);
+  	font-size: 2.0rem;
+  	-webkit-transition: all .2s linear;
+  	transition: all .2s linear;
+  	opacity: 0;
+  	position: absolute;
+  	z-index: 100;
+  	color: #fff;
+  	display: block;
+  	margin-right: auto;
+  	margin-left: auto;
+  	left: 0;
+  	right: 0;
+  	bottom: -40px;
+  	text-transform: none;
+  	font-family: 'Open sans', sans-serif;
+  	font-weight: 300;
+  	font-style: italic;
+  	letter-spacing: 0;
+  	}
+
+  nav li a:hover:before {
+  	-webkit-transform: translateX(0);
+  	-ms-transform: translateX(0);
+  	transform: translateX(0);
+  	opacity: 1;
+  	}
+
+  nav li a:hover:after {
+  	-webkit-transform: translateY(15px);
+  	-ms-transform: translateY(15px);
+  	transform: translateY(0);
+  	opacity: 1;
+  	}
+
+  nav ul li a{
+  	font-size: 40px;
+  }
+
+  nav li:nth-of-type(1) {
+  	background-color: #bad3ff
+  }
+
+  nav li:nth-of-type(2) {
+  	background-color: #a4c6ff
+  }
+
+  nav li:nth-of-type(3) {
+  	background-color: #75a9ff
+  }
+
+  nav li:nth-of-type(4) {
+  	background-color: #4689ff
+  }
+
+  nav li:nth-of-type(5) {
+  	background-color: #136fff
+  }
+
+  nav li:nth-of-type(6) {
+  	background-color: #005fff
+  	}
 
 }
-#sp-menu a{
-	color:#000;
-	font-weight:bold;
-}*/
