--- a/css/top.css
+++ b/css/top.css
@@ -21,6 +21,10 @@
 	
 	transition: 0.3s ease 0s;
 }
+.main_p{
+	color: black;
+	font-weight: bold;
+}
 .contri_img{
 	display: none;
 	height: 300px;
@@ -84,6 +88,25 @@
 .news_table td{
 	border-bottom: 1px solid black;
 	font-size: 20px;
+}
+@media screen and (max-width: 400px) {
+	.big_main{
+		text-align: center;
+	}
+	.man{
+		justify-content:flex-start;
+		flex-wrap: wrap;
+	}
+	.img_menu{
+		width: 230px;
+	}
+	.bottom_main{
+		text-align: center;
+	}
+	.main_p{
+	color: black;
+	font-size:25px;
+}
 }
 
 
